--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -20,9 +20,12 @@
    "source": [
     "# Lab 1: Expressions\n",
     "\n",
-    "Welcome to Data Science for All!\n",
+    "Welcome to STAT 8: *Data Science for Everyone*!\n",
     "\n",
-    "Please refer to canvas for course policies and instructions on how to submit assignments.\n",
+    "Labs are designed to help you learn the material, so you can complete the homework.\n",
+    "\n",
+    "Collaborating on labs is more than okay -- it's encouraged! You should rarely remain stuck for more than a few minutes on questions in labs, so ask an instructor or classmate for help.  Please don't just share answers.\n",
+    "\n",
     "\n",
     "#### Today's lab\n",
     "\n",
