--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -55,11 +55,16 @@
     "After you edit a text cell, click the \"run cell\" button at the top that looks like ▶| or hold down `shift` + `return` to confirm any changes. (Try not to delete the instructions of the lab.)"
    ]
   },
-  {
+ {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "cell-lab01-3",
+   "metadata": {
+    "deletable": false
+   },
    "source": [
-    "**Question 1.1.1.** This paragraph is in its own text cell.  Try editing it so that this sentence is the last sentence in the paragraph, and then click the \"run cell\" ▶| button or hold down `shift` + `return`.  In other words, delete this sentence.  "
+    "**Question 1.1.1.** This paragraph is in its own text cell.  Try editing this cell, by deleting the sentence below that begins with \"*Attending class*\", so that it's gone. Then click the \"run cell\" ▶| button or hold down `shift` + `return`.\n",
+    "\n",
+    "Attending class is optional."
    ]
   },
   {
