--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -67,8 +67,9 @@
     "Attending class is optional."
    ]
   },
-  {
+ {
    "cell_type": "markdown",
+   "id": "cell-lab01-4",
    "metadata": {},
    "source": [
     "## 1.2. Code cells\n",
@@ -76,7 +77,7 @@
     "\n",
     "To run the code in a code cell, first click on that cell to activate it.  It'll be highlighted with a little green or blue rectangle.  Next, either press ▶| or hold down `shift` + `return`.\n",
     "\n",
-    "Try running this cell:"
+    "Try running the cell below that begins with \"*print*\""
    ]
   },
   {
