Q1.2.1 Changed wording on question
{
   "cell_type": "markdown",
   "id": "cell-lab01-10",
   "metadata": {},
   "source": [
    "**Question 1.2.1.** Change the cell **above** by inserting an expression in between both print lines, so that it prints out:\n",
    "\n",
    "    First this line,\n",
    "    then the whole 🌏,\n",
    "    and then this one.\n",
    "\n",
    "*Hint:* If you're stuck on the Earth symbol for more than a few minutes, try talking to a neighbor or a staff member. That's a good idea for any lab problem."
   ]
  },

--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -122,11 +122,12 @@
     "print(\"and then this one.\")"
    ]
   },
-  {
+ {
    "cell_type": "markdown",
+   "id": "cell-lab01-10",
    "metadata": {},
    "source": [
-    "**Question 1.2.1.** Using the first coding cells as examples, change the cell above so that it prints out:\n",
+    "**Question 1.2.1.** Change the cell **above** by inserting an expression in between both print lines, so that it prints out:\n",
     "\n",
     "    First this line,\n",
     "    then the whole 🌏,\n",
