--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -157,6 +157,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cell-lab01-12",
    "metadata": {},
    "source": [
     "## 1.4. Errors\n",
@@ -164,11 +165,9 @@
     "1. The rules are *simple*.  You can learn most of them in a few weeks and gain reasonable proficiency with the language in a semester.\n",
     "2. The rules are *rigid*.  If you're proficient in a natural language, you can understand a non-proficient speaker, glossing over small mistakes.  A computer running Python code is not smart enough to do that.\n",
     "\n",
-    "Whenever you write code, you'll make mistakes.  When you run a code cell that has errors, Python will sometimes produce error messages to tell you what you did wrong.\n",
+    "Whenever you write code, you'll make mistakes. We welcome those mistakes because that's how we learn! When you run a code cell that has errors, Python will sometimes produce error messages to tell you what you did wrong.\n",
     "\n",
-    "Errors are okay; even experienced programmers make many errors.  When you make an error, you just have to find the source of the problem, fix it, and move on.\n",
-    "\n",
-    "We have made an error in the next cell.  Run it and see what happens."
+    "Errors are okay; even experienced programmers make many errors.  When you make an error, you just have to find the source of the problem, fix it, and move on.\n"
    ]
   },
   {
