--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should see something like this (minus our annotations):\n",
+    "You should see something like this (minus our annotations and possibly a different 'SyntaxError'):\n",
     "\n",
     "<img src=\"error.jpg\"/>\n",
     "\n",
