Q1.4 added a cell for student responce

--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -198,7 +198,18 @@
     "\n",
     "There's a lot of terminology in programming languages, but you don't need to know it all in order to program effectively. If you see a cryptic message like this, you can often get by without deciphering it.  (Of course, if you're frustrated, ask a neighbor or a staff member for help.) In the example above, we see that one source of a `SyntaxError` has to do with parentheses. \n",
     "\n",
-    "Try to fix the code above so that you can run the cell and see the intended message instead of an error."
+    "Try to fix the code above so that you can run the cell and see the intended message instead of an error.\n",
+    "Type a `1`, in the cell below, if the cell ran without a `SyntaxError`, otherwise type `0`. "
+   ]
+  },
+{
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cell-lab01-20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    
    ]
   },
   {
