--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -224,7 +224,11 @@
     "You may run into problems where your kernel is stuck for an excessive amount of time, your notebook is very slow and unresponsive, or your kernel loses its connection. If this happens, try the following steps:\n",
     "1. At the top of your screen in the menu bar, click **Kernel**, then **Interrupt Kernel**.\n",
     "2. If that doesn't help, click **Kernel**, then **Restart Kernel...**. If you do this, you will have to run your code cells from the start of your notebook up until where you paused your work.\n",
-    "3. If that doesn't help, restart your server. First, save your work by clicking **File** at the top left of your screen, then **Save Notebook**. Next, click **File** at the top left and, second from the bottom, select **Hub Control Panel**. You will see a big red button that says *Stop My Server*. Choose **Stop My Server** to shut it down, then **Start My Server** to start it back up. Then, navigate back to the notebook you were working on. You'll still have to run your code cells again."
+    "3. If that doesn't help, restart your server. \n",
+    "     a. Save your work by clicking **File** at the top left of your screen, then **Save Notebook**.\n", 
+    "     b. Click **File** at the top left and, second from the bottom, select **Hub Control Panel**. You will see a big red button that says *Stop My Server*. \n",
+    "     c. Choose **Stop My Server** to shut it down, then **Start My Server** to start it back up. \n",
+    "     d. Navigate back to the notebook you were working on. You'll still have to run your code cells again."
    ]
   },
   {
