--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -227,9 +227,12 @@
     "3. If that doesn't help, restart your server. \n",
     "\n",
     "     a. Save your work by clicking **File** at the top left of your screen, then **Save Notebook**.\n", 
-    "     B. Click **File** at the top left and, second from the bottom, select **Hub Control Panel**. You will see a big red button that says *Stop My Server*. \n",
-    "     C. Choose **Stop My Server** to shut it down, then **Start My Server** to start it back up. \n",
-    "     D. Navigate back to the notebook you were working on. You'll still have to run your code cells again."
+    "\n",
+    "     b. Click **File** at the top left and, second from the bottom, select **Hub Control Panel**. You will see a big red button that says *Stop My Server*. \n",
+    "\n",
+    "     c. Choose **Stop My Server** to shut it down, then **Start My Server** to start it back up. \n",
+     "\n",
+    "     d. Navigate back to the notebook you were working on. You'll still have to run your code cells again."
    ]
   },
   {
