--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -35,6 +35,7 @@
     "2. write and evaluate some basic *expressions* in Python, the computer language of the course;\n",
     "3. call *functions* to use code other people have written; and\n",
     "4. break down Python code into smaller parts to understand it.\n",
+    "      5. I yam here.\n",
     "\n",
     "This lab covers parts of [Chapter 3](http://www.inferentialthinking.com/chapters/03/programming-in-python.html) of the online textbook. You should read the examples in the book, but not right now. Instead, let's get started!"
    ]
