--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -350,6 +350,7 @@
    "outputs": [],
    "source": [
     "# Replace the ellipses (`...`) with your expression.  Try to use parentheses only when necessary.\n",
+    "# Note: You do not need to delete any line that begins with `#` since this notates comments and comments are not code.\n",
     "# HINT: The correct output should equal 72.0, so keep thinking about order of operations if you get a different result.\n",
     "..."
    ]
