--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -362,7 +362,7 @@
     "# 3. Names\n",
     "In natural language, we have terminology that lets us quickly reference very complicated concepts.  We don't say, \"That's a large mammal with brown fur and sharp teeth!\"  Instead, we just say, \"Bear!\"\n",
     "\n",
-    "In Python, we do this with *assignment statements*. An assignment statement has a name on the left side of an `=` sign and an expression to be evaluated on the right."
+    "In Python, we do this with *assignment statements*. An assignment statement has a name on the left side of an `=` sign and an expression to be evaluated on the right. Run the cell below."
    ]
   },
   {
@@ -378,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When you run that cell, Python first computes the value of the expression on the right-hand side, `3 * 2 + 4`, which is the number 10.  Then it assigns that value to the name `ten`.  At that point, the code in the cell is done running.\n",
+    "When you ran that cell, Python first computed the value of the expression on the right-hand side, `3 * 2 + 4`, which is the number 10.  Then it assigned that value to the name `ten`.  At that point, the code in the cell is done running and there is no output seen.\n",
     "\n",
     "After you run that cell, the value 10 is bound to the name `ten`:"
    ]
