--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -380,7 +380,7 @@
    "source": [
     "When you ran that cell, Python first computed the value of the expression on the right-hand side, `3 * 2 + 4`, which is the number 10.  Then it assigned that value to the name `ten`.  At that point, the code in the cell is done running and there is no output seen.\n",
     "\n",
-    "After you run that cell, the value 10 is bound to the name `ten`:"
+    "After you ran that cell, the value 10 was bound to the name `ten`. Shockingly, you will now run the cell below. From now on, assume you will run code cells as you see them."
    ]
   },
   {
