--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -362,7 +362,18 @@
     "# 3. Names\n",
     "In natural language, we have terminology that lets us quickly reference very complicated concepts.  We don't say, \"That's a large mammal with brown fur and sharp teeth!\"  Instead, we just say, \"Bear!\"\n",
     "\n",
-    "In Python, we do this with *assignment statements*. An assignment statement has a name on the left side of an `=` sign and an expression to be evaluated on the right. Run the cell below."
+    "Run the cell below to see what happens.\n",
+     {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ten"
+   ]
+  },
+    "You should have gotten an error message since `ten` is a word not a value.\n",
+    "In Python, we can change the meaning of words with *assignment statements*. An assignment statement has a name on the left side of an `=` sign and an expression to be evaluated on the right. Run the cell below."
    ]
   },
   {
