fixed code hopefully

--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -362,7 +362,7 @@
     "# 3. Names\n",
     "In natural language, we have terminology that lets us quickly reference very complicated concepts.  We don't say, \"That's a large mammal with brown fur and sharp teeth!\"  Instead, we just say, \"Bear!\"\n",
     "\n",
-    "Run the cell below to see what happens.\n",
+    "Run the cell below to see what happens."
    ]
   },
   {
