Wording for 3.Names

--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -378,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should have gotten an error message since `ten` is a word not a value. Don't worry about that cell; we will go over how to fix it in the cells belwo.\n",
+    "You should have gotten an error message since `ten` is a word not a value. Don't worry about that cell anymore. The error will not cause problems for future cells.\n",
     "In Python, we can change the meaning of words with *assignment statements*. An assignment statement has a name on the left side of an `=` sign and an expression to be evaluated on the right. Run the cell below."
    ]
   },
