--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -414,17 +414,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The statement `ten = 3 * 2 + 4` is not asserting that `ten` is already equal to `3 * 2 + 4`, as we might expect by analogy with math notation.  Rather, that line of code changes what `ten` means; it now refers to the value 10, whereas before it meant nothing at all.\n",
+    "The statement `ten = 3 * 2 + 4` is not asserting that `ten` was already equal to `3 * 2 + 4`, as we previously saw.  Rather, that line of code changes what `ten` means; it now refers to the value 10, whereas before it meant nothing at all.\n",
     "\n",
     "If the designers of Python had been ruthlessly pedantic, they might have made us write\n",
     "\n",
     "    define the name ten to hereafter have the value of 3 * 2 + 4 \n",
     "\n",
-    "instead.\n",
-    "\n",
-    "**Question 3.1.** In the cell below, replace the ellipsis with code that uses a name (like type in `eleven` and run the cell) that hasn't been assigned to anything.\n",
-    "\n",
-    "IMPORTANT: You should see an error because the name `eleven` does not refer to anything! That is the point of this exercise."
+    "Thank goodness they didn't!"
    ]
   },
   {
