--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -494,9 +494,8 @@
    "metadata": {},
    "source": [
     "## 3.1. Checking your code\n",
-    "Now that you know how to name things, you can start using the **built-in tests** to check whether your work is correct. Sometimes, there are multiple tests for a single question, and passing all of them is required to receive credit for the question. Please don't change the contents of the test cells. \n",
-    "\n",
-    "All assignments in the course will be distributed as notebooks like this one, and you will submit your work from the notebook. We will use a system called Otter-Grader to check your work and help you submit. If you haven’t already, make sure you have run the cell at the top of this notebook to initialize Otter-Grader.\n",
+    "Now that you know how to name things, you can start using the **built-in tests** to check whether your work is correct using Otter-Grader. Sometimes, there are multiple tests for a single question, and passing all of them is required to receive credit for the question. Please don't change the contents of the test cells. \n",
+    "If you haven’t already, make sure you have run the cell at the top of this notebook to initialize Otter-Grader.\n",
     "\n",
     "Go ahead and attempt Question 3.1.2. Running the cell directly after it will test whether you have assigned `seconds_in_a_decade` correctly in Question 3.1.2. If you haven't, this test will tell you the correct answer. Resist the urge to just copy it, and instead try to adjust your expression. (Sometimes the tests will give hints about what went wrong...)"
    ]
