--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -498,7 +498,7 @@
     "\n",
     "If you haven’t already, make sure you have run the cell at the top of this notebook to initialize Otter-Grader.\n",
     "\n",
-    "Go ahead and attempt Question 3.1.2. Running the cell directly after it will test whether you have assigned `seconds_in_a_decade` correctly in Question 3.1.2. If you haven't, this test will tell you the correct answer. Resist the urge to just copy it, and instead try to adjust your expression. (Sometimes the tests will give hints about what went wrong...)"
+    "After reading the next few lines, you will be writing code to answer Question 3.1.2. Running the cell directly after it, 'grader.check( )', will test whether you have assigned `seconds_in_a_decade` correctly in Question 3.1.2. If you haven't, this test will tell you the correct answer. Resist the urge to just copy it, and instead try to adjust your expression. (Sometimes the tests will give hints about what went wrong...)"
    ]
   },
   {
