--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -508,7 +508,8 @@
     "editable": false
    },
    "source": [
-    "**Question 3.1.2.** Assign the name `seconds_in_a_decade` to the number of seconds between midnight January 1, 2010 and midnight January 1, 2020. You should create a series of lines, naming the intermediate results, to build up to`seconds_in_a_decade`.\n",
+    "**Question 3.1.2.** Assign the name `seconds_in_a_decade` to the number of seconds between midnight January 1, 2010 and midnight January 1, 2020. You should create a series of lines, naming the intermediate results, to build up to`seconds_in_a_decade`, like we did in `yearly_salary` above.\n",
+    "\n",
     "Note that there are two leap years in this span of a decade. A non-leap year has 365 days and a leap year has 366 days.\n",
     "\n",
     
