changed comments in Q3.1.2

--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -527,16 +527,14 @@
    },
    "outputs": [],
    "source": [
-    "# Change the next line, adding additional lines if you'd like, \n",
-    "# so that it computes the number of seconds in a decade \n",
-    "# and assigns that number the name, seconds_in_a_decade.\n",
-    "# For full credit, be sure to show work like the yearly_salary\n",
-    "# example above.\n",
+    "# Insert multiple lines below these comments, \n",
+    "# to build up to computing the number of seconds in a decade \n",
+    "# and assign that number the name, seconds_in_a_decade.\n",
     "\n",
     "seconds_in_a_decade = ...\n",
     "\n",
-    "# We've put this line in this cell \n",
-    "# so that it will print the value you've given to seconds_in_a_decade when you run it.  \n",
+    "# We've put this line of code below, in this cell \n",
+    "# so that it will print the value you've given to seconds_in_a_decade when you run the cell.  \n",
     "# You don't need to change this.\n",
     "seconds_in_a_decade"
    ]
