--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -533,7 +533,7 @@
     "\n",
     "seconds_in_a_decade = ...\n",
     "\n",
-    "# We've put this line of code below, in this cell \n",
+    "# We've put the line of code below, in this cell \n",
     "# so that it will print the value you've given to seconds_in_a_decade when you run the cell.  \n",
     "# You don't need to change this.\n",
     "seconds_in_a_decade"
