--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -556,13 +556,11 @@
    "metadata": {},
    "source": [
     "# 3.2. Comments\n",
-    "You may have noticed these lines in the cell in which you answered Question 3.2:\n",
+    "Hopefully you noticed the lines in the previous question:\n",
     "\n",
-    "    # Change the next line, adding additional lines if you'd like, \n",
-    "    # so that it computes the number of seconds in a decade \n",
-    "    # and assigns that number the name, seconds_in_a_decade.\n",
-    "    # For full credit, be sure to show work like the yearly_salary\n",
-    "    # example above.\n",
+    "    # Insert multiple lines below these comments, \n",
+    "    # to build up to computing the number of seconds in a decade \n",
+    "    # and assign that number the name, seconds_in_a_decade.\n",
     "    \n",
     "This is called a *comment*. It doesn't make anything happen in Python; Python ignores anything on a line after a `#`.  Instead, it's there to communicate something about the code to you, the human reader. Comments are extremely useful. \n",
     "\n",
