--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -527,9 +527,9 @@
    },
    "outputs": [],
    "source": [
-    "# Insert multiple lines below these comments, \n",
-    "# to build up to computing the number of seconds in a decade \n",
-    "# and assign that number the name, seconds_in_a_decade.\n",
+    "# *Insert multiple lines below these comments,* \n",
+    "# *to build up to computing the number of seconds in a decade* \n",
+    "# *and assign that number the name, seconds_in_a_decade.*\n",
     "\n",
     "seconds_in_a_decade = ...\n",
     "\n",
