commented the picture

--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -564,6 +564,8 @@
     "    \n",
     "This is called a *comment*. It doesn't make anything happen in Python; Python ignores anything on a line after a `#`.  Instead, it's there to communicate something about the code to you, the human reader. Comments are extremely useful. \n",
     "\n",
+    "Anyways, here's a cartoon that illustrates the importance of comments. How old were you in 2013??\n",
+    "\n",
     "\n",
     "<img src=\"http://imgs.xkcd.com/comics/future_self.png\">\n",
     "Source: http://imgs.xkcd.com/comics/future_self.png"
