--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -616,7 +616,7 @@
     "\n",
     "<img src=\"map.jpg\"/>\n",
     "\n",
-    "**Question 4.1.1.** Fill in the line `num_avenues_away = ...` in the next cell so that the cell calculates the distance Chunhua must walk and gives it the name `manhattan_distance`.  Everything else has been filled in for you.  **Use the `abs` function.** Also, be sure to run the test cell afterward to test your code.\n",
+    "**Question 4.1.1.** Fill in the line `num_avenues_away = ...` in the cell below, which is used in `manhattan_distance` to calculate the distance Chunhua must walk.  Everything else has been filled in for you.  **Use the `abs` function.** Also, be sure to run the test cell afterward to test your code.\n",
     "\n",
     "<!--\n",
     "BEGIN QUESTION\n",
