--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -688,7 +688,7 @@
     "\n",
     "    abs(42-34)\n",
     "\n",
-    "has 2 number expressions in a subtraction expression in a function call expression.  And you probably wrote something like `abs(7-10)` to compute `num_avenues_away`.\n",
+    "has 2 number expressions in a subtraction expression in a function call expression. Have we said *expression* yet? And you probably wrote something like `abs(7-10)` to compute `num_avenues_away`.\n",
     "\n",
     "Nested expressions can turn into complicated-looking code. However, the way in which complicated expressions break down is very regular.\n",
     "\n",
