--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -755,7 +755,7 @@
     "# of the difference between Paola's height (1.76m) and the average human height (1.688m).\n",
     "paola_distance_from_average_m = ...\n",
     "\n",
-    "# Again, we've written this here \n",
+    "# Again, we've written the final line of code below\n",
     "# so that the distance you compute will get printed \n",
     "# when you run this cell.\n",
     "paola_distance_from_average_m"
