--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -877,6 +877,39 @@
     "grader.check(\"q5_1_1\")"
    ]
   },
+
+ {
+   "cell_type": "markdown",
+   "id": "cell-lab01-83",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "source": [
+    "## Submission\n",
+    "\n",
+    "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
+    "\n",
+    "You’re done with Lab 1!\n",
+    "\n",
+    "Be sure to run all of the cells and the grader checks and verify that they all pass.\n",
+    "Then click on **File** in the menu bar, and choose **Save and Export Notebook As** and select PDF. Also Download as Notebook from the File menu, correctly name your files, and submit the two files on canvas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cell-lab01-84",
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "# Save your notebook first, then run this cell to export your submission.\n",
+    "grader.export(pdf=False)"
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {},
