--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -878,6 +878,36 @@
    ]
   },
 
+{
+   "cell_type": "markdown",
+   "id": "cell-lab01-80",
+   "metadata": {},
+   "source": [
+    "You're done with Lab 1! \n",
+    "\n",
+
+    "\n",
+  
+    "\n",
+    "**Important submission steps:** COME BACK TO THIS LD\n",
+    "1. **Run** the `grader.check_all` cell below before exporting.\n",
+    "2. Then choose **Save Notebook** from the **File** menu, to save all the outputs.\n",
+    "3. Then **run the final cell**: `grader.export` \n",
+    "4. Click the link to download the zip file.\n",
+    "5. Then submit the zip file to the corresponding assignment according to your instructor's directions. \n",
+    "\n",
+    "**It is your responsibility to make sure your work is saved before running the last cell.**\n",
+    "\n",
+    "\n",
+    "1. Click on **File** in the menu bar, and choose **Save Notebook**, to save all the notebook.\n",
+    "2. Then click on **File** again, and choose **Save and Export Notebook As** and select PDF. \n",
+    "3. Then click on **File** again, choose **Download**.\n",
+    "4. Correctly rename your files and submit both files into the assignment on Canvas.",
+    "\n",
+    "\n"
+   ]
+  },
+
  {
    "cell_type": "markdown",
    "id": "cell-lab01-83",
@@ -888,7 +918,7 @@
    "source": [
     "## Submission\n",
     "\n",
-    "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
+    " OLD STUFF Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
     "\n",
     "You’re done with Lab 1!\n",
     "\n",
