--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -918,7 +918,7 @@
    "source": [
     "## Submission\n",
     "\n",
-    " OLD STUFF Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
+    "Make sure you have run all cells in your notebook in order before running the cell below, so that all images/graphs appear in the output. The cell below will generate a zip file for you to submit. **Please save before exporting!**\n",
     "\n",
     "You’re done with Lab 1!\n",
     "\n",
@@ -944,7 +944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Congratulations, you're done with Lab 1!  \n",
+    " OLD STUFF Congratulations, you're done with Lab 1!  \n",
     "\n",
     "Be sure to...\n",
     "\n",
